src/tests/snapshots/niri__tests__window_opening__check_target_size@omT-ofT-b-wfsAN-t.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\nopen floating: true\nborder on\nwant fullscreen: AN\ntabbed"
expression: snapshot
---
initial configure:
size: 0 × 0, bounds: 1272 × 712, states: []

post-map configures:
size: 1280 × 720, bounds: 1231 × 680, states: [Fullscreen]
size: 1280 × 720, bounds: 1231 × 680, states: [Fullscreen, Activated]

unfullscreen configure:
size: 0 × 0, bounds: 1272 × 712, states: [Activated]
