src/tests/snapshots/niri__tests__window_opening__check_target_size@omT-ofT-b.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\nopen floating: true\nborder on"
expression: snapshot
---
initial configure:
size: 0 × 0, bounds: 1272 × 712, states: []

post-map configures:
size: 1 × 1, bounds: 1272 × 712, states: [Activated]
